--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,7 @@ test:
 production:
   <<: *default
   database: freemarket_sample_78a_production
-  username: freemarket_sample_78a
-  password: <%= ENV['FREEMARKET_SAMPLE_78A_DATABASE_PASSWORD'] %>
+  username: root
+  # password: <%= ENV['FREEMARKET_SAMPLE_78A_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
